--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,12 +1,18 @@
 $color-grey-light-1: #f9f5f3; // Light background
 $color-grey-light-2: #f2efee; // Light lines
 $color-grey-light-3: #d3c7c3; // Light text (placeholder)
+$color-grey-dark-1: #615551; // Normal text
+$color-grey-dark-2: #918581; // Lighter text
 
 $color-black: #000;
 
 @mixin gridCentering {
   justify-self: center;
   align-self: center;
+}
+
+@mixin boxShadow {
+  box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
 }
 
 * {
@@ -27,15 +33,17 @@ html {
 
 body {
   font-family: "Nanum Gothic", sans-serif;
-  height: 100vh;
-  overflow: hidden;
   line-height: 1.6;
   font-weight: 400;
+  height: 100vh;
   background-image: linear-gradient(
     to right bottom,
     $color-grey-light-2,
     $color-grey-light-3
   );
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 // body {
