--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,6 +1,6 @@
 // Nav
 
-.search__field {
+.form__input {
   padding: 4px;
 }
 
@@ -22,12 +22,17 @@
 // RESULTS
 
 .preview {
-  height: 6rem;
+  height: 20%;
+  min-height: 10vh;
   display: grid;
   grid-template-columns: 25% 75%;
+  border-bottom: 1px solid $color-grey-light-3;
+  font-size: 1.6rem;
+  cursor: pointer;
+  transition: all 0.2s ease;
 
-  &:not(:last-child) {
-    margin-bottom: 1rem;
+  &:first-child {
+    margin-top: 2rem;
   }
   &__marker {
     @include gridCentering;
@@ -38,10 +43,11 @@
 
     &--name {
     }
+  }
 
-    &--address {
-      margin-top: 1rem;
-    }
+  &:hover {
+    background-color: $color-grey-light-3;
+    transform: translateY(-1px);
   }
 }
 
@@ -52,14 +58,14 @@
   border: 1px solid $color-grey-light-3;
   cursor: pointer;
   overflow: hidden;
-
+  border-radius: 3px;
   &:focus {
     outline: none;
   }
 
   &:hover {
     transform: translateY(-2px);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+    @include boxShadow;
   }
   &:active {
     transform: translateY(-1px);
@@ -73,6 +79,8 @@
   padding: 1rem 5rem;
   position: relative;
   align-items: stretch;
+  @include boxShadow;
+  border-radius: 3px;
 
   &__list {
     visibility: hidden;
@@ -85,7 +93,7 @@
     right: 0;
     list-style: none;
     transition: all 0.3s;
-
+    z-index: 2;
     &--name {
       padding: 1rem 2rem;
 
@@ -99,5 +107,20 @@
   &:hover &__list {
     visibility: visible;
     opacity: 1;
+  }
+
+  &__preview {
+    padding: 1rem 2rem;
+    transition: all 0.2s ease;
+    &--name {
+    }
+    &--address {
+      font-size: 1rem;
+    }
+
+    &:hover {
+      background-color: $color-grey-light-3;
+      transform: translateY(-1px);
+    }
   }
 }
