--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -144,10 +144,13 @@
   margin: 5rem auto;
   text-align: center;
   z-index: 99;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // position: absolute;
+  // top: 30%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
 
   svg {
     height: 6rem;
